{
    "name": "InputSystem",
    "maps": [
        {
            "name": "InventoryManager",
            "id": "c8fa2c81-f644-46db-af01-7cb45b8556f6",
            "actions": [
                {
                    "name": "ButtonRegular",
                    "type": "Button",
                    "id": "0f565519-2860-4bc1-b581-b83d5b9dc50c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "16da765c-8293-4d8f-b0ad-b4e038ea19c1",
                    "path": "<HID:: USB Gamepad          >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonRegular",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}